# project-infnet-engenharia-de-machine-learning

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_ingestion.yml  parameters_data_preparation.yml  parameters_data_processing.yml  parameters_data_science.yml  parameters_model_serving.yml
docs/: rubricas.md
docs/source/: conf.py  index.rst
notebooks/: data_exploration.ipynb  data_preparation.ipynb  model_prediction.ipynb  model_serving.ipynb  model_training.ipynb
src/project_infnet_engenharia_de_machine_learning/: __init__.py  __main__.py  hooks.py  settings.py
src/project_infnet_engenharia_de_machine_learning/pipelines/data_ingestion/: __init__.py  nodes.py  pipeline.py
src/project_infnet_engenharia_de_machine_learning/pipelines/data_preparation/: __init__.py  nodes.py  pipeline.py
src/project_infnet_engenharia_de_machine_learning/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/project_infnet_engenharia_de_machine_learning/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
src/project_infnet_engenharia_de_machine_learning/pipelines/model_serving/: __init__.py  nodes.py  pipeline.py
streamlit/: app.py
tests/pipelines/data_ingestion/: test_pipeline.py
tests/pipelines/data_preparation/: test_pipeline.py
tests/pipelines/data_processing/: test_pipeline.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/model_serving/: test_pipeline.py
